service_mesh/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: sentinelai-strict-mtls
  namespace: sentinelai-prod
spec:
  mtls:
    mode: STRICT
